@@ -880,3 +880,6 @@ failing task has retries lined up with a very short delay period.
 the suite will abort with exit status 1 if any task false. The main
 intended use for this is in pre-release automated test suites.
 
++ Initial GUI text view task state filtering now shows all tasks, as
+users often forget which task states are filtered out.
+
